--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=*
+spring.datasource.username=*
+spring.datasource.password=*
 
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
