--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=*
 
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
