--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.jpa.properties.hibernate.jdbc.batch_size=20
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.generate_statistics=true
 
-spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.date-format=HH:mm:ss
 spring.jackson.time-zone=Europe/Moscow
