--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.64",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
